# Triangles3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
OpenGL/: CMakeLists.txt
OpenGL/include/: EBO.hpp  VAO.hpp  VBO.hpp  camera.hpp  glew_init.hpp  glfw_wrapper.hpp  line.hpp  plane.hpp  shader.hpp  vector.hpp  viewer.hpp
OpenGL/include/glad/: glad.h
OpenGL/learnOpenGL/: camera1.cpp  camera2.cpp  hello_triangle.cpp  math.cpp  shaders_1.cpp  shaders_2.cpp
OpenGL/shaders/: fragment.frag  vertex.vert
OpenGL/src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  glad.c  google_test.cpp  main.cpp  shader.cpp
include/: config.hpp  intersection.hpp  interval.hpp  line.hpp  octotree.hpp  plane.hpp  point.hpp  triag_core.hpp  triangle_with_id.hpp  triangles.hpp  vector.hpp
scripts/: extract_triangles.py
src/: config.cpp  google_test.cpp  main.cpp
src/cli/: main.cpp
src/opengl/: main.cpp  viewer.cpp
test/: 7.res.bulat1337
tests/: CMakeLists.txt
tests/end2end/: e2e_tests.txt  run_e2e_tests.py
tests/unit/: google_test_gl.cpp
